--- a/src/app/modules/admin/components/start-filling-action/start-filling-action.component.scss
+++ b/src/app/modules/admin/components/start-filling-action/start-filling-action.component.scss
@@ -1,5 +1,5 @@
     #form{
-        width:auto;
+        width:1100px;
         height: auto;
       //  border: ridge 3px;
      
@@ -183,3 +183,14 @@ h1{
   color: coral;
   font-weight:bolder
 }
+
+#printbtn{
+  margin-left: 900px;
+  width: 100px;
+  height: 30px;
+  color: cadetblue;
+  margin-top:5px;
+  position: absolute;
+}
+
+
