--- a/src/app/select-gst/select-gst.component.html
+++ b/src/app/select-gst/select-gst.component.html
@@ -1,13 +1,7 @@
-<form id="gstform" [formGroup]="gstForm" >
+<form id="gstform" [formGroup]="gstForm">
 
 
-  <!-- <label class="addlabel">Click on Plus icon to Add New GST</label>
-  <i class="bi bi-plus-lg"></i>
-  <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-plus-lg"
-      viewBox="0 0 16 16" id="plusicon" (click)="openModal()">
-      <path fill-rule="evenodd"
-          d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
-  </svg> -->
+
   <div class="container">
     <div class="row" id="dropdownrows">
       <div class="2">
@@ -32,7 +26,8 @@
     </div>
   </div>
   <div id="gstsavebtn">
-    <button type="submit" class="btn btn-success" (click)="onSubmit()">Save</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <button type="submit" class="btn btn-success"
+      (click)="onSubmit()">Save</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button type="submit" class="btn btn-danger" (click)="cancel()">Cancel</button>
 
   </div>
