--- a/src/app/modules/admin/components/finish-filling-action/finish-filling-action.component.scss
+++ b/src/app/modules/admin/components/finish-filling-action/finish-filling-action.component.scss
@@ -1,52 +1,9 @@
-// #form{
-//     width: 1300px;
-//     height: 500px;
-//     border: ridge 10px;
-// }
-// .card1{
-//     height: 200px;
-//     margin-top: 50px;
-// }
-// .card-body1{
-//     display: inline-flex;
-
-//     // margin-top: 50px;
-// }
-// .lables{
-//     font-size: 15px;
-//     font-weight: bold;
-//     margin-left: 18px;
-//     margin-top: 20px;
-  
-// }
-// #submittedbtns{
-//      margin-top:30px;
-//     margin-left: 450px;
-   
-   
-// }
-// #dropdown{
-//   margin-top: 20px;
-//   width: 300px;
-//   height: 40px;
-// }
-// h1{
-//   margin-left: 550px;
-//   color:coral
-// }
-// #printbtn{
-//     margin-left: 1100px;
-//     width: 100px;
-//     height: 30px;
-//     color: cadetblue;
-//     margin-top: -200px;
-// }
 
 
 
 
 #form{
-    width:auto;
+    width:1200px;
     height: auto;
   //  border: ridge 3px;
 }
@@ -92,6 +49,13 @@ h1{
   
   
 }
-
+#printbtn{
+  margin-left: 900px;
+  width: 100px;
+  height: 30px;
+  color: cadetblue;
+  margin-top:5px;
+  position: absolute;
+}
 
 
