--- a/src/app/modules/admin/components/start-filling-action/start-filling-action.component.html
+++ b/src/app/modules/admin/components/start-filling-action/start-filling-action.component.html
@@ -1,91 +1,14 @@
-<!-- <form [formGroup]="startFillingform" id="form">
-    <h1>Start Filling</h1>
-    <button type="button" id="printbtn">Print</button>
-    <div class="card-container">
-        <div>
-            <div class="card">
-
-                <div class="card-header">
-                    <span>
-
-                        <b>Order Id</b>
-                            <br><input type="text" placeholder="{{Orderdetails.orderId}}" formControlName="orderId" [(ngModel)]="Orderdetails.orderId">
-                    
-                        <li><b>status</b>
-                            <br>{{Orderdetails.statusCd}}
-                        </li>
-                        <li><b>Expected Date</b>
-                            <br>{{Orderdetails.orderSubmitDtTm}}
-                        </li>
-                        <li><b>Total Amount</b>
-                            <br>₹{{Orderdetails.totalAmount}}.00
-                        </li>
-                        <li><b>mobileNumber</b>
-                            <br>{{Orderdetails.mobileNumber}}
-                        </li>
-                        <li><b>Last Updated Date:</b>
-                            <br>Null
-                        </li>
-                        <span class="icons">
-
-                        </span>
-                    </span>
-
-                </div>
-
-
-                <div class="card-body" class="image-item">
-                    <div *ngFor="let item of orderItemDetails">
-                        <img src="{{imageBaseUrl}}{{item.imageUrl}}" class="image" height="130px" width="130px">
-                        <div class="description">
-
-
-                            <p> <b>Name:</b>&nbsp;&nbsp;&nbsp;{{item.productName}}</p>
-                            <p><b>Quantity:</b>&nbsp;&nbsp;&nbsp;{{item.quantity}}</p>
-                            <p><b>GST:</b>&nbsp;&nbsp;&nbsp;{{item.igstAmt}}%</p>
-
-                            <p><b>price:</b>&nbsp;&nbsp;&nbsp;{{item.totalPrice}}</p>
-                        </div>
-                    </div>
-                    
-                </div>
-
-            <div class="row">
-                <div class="col-2">
-                    <label class="lables">Date and time:</label>
-                    <input type="datetime-local" formControlName="lastUpdateDtTm"
-                        [(ngModel)]="startFillingform.lastUpdateDtTm" class="form-control">
-                </div>
-                <div class="col-4">
-                     <label>Click on Status button:</label>
-                     <br>
-                    <button (click)="filling($event)" [value]="startfilling"  style="width: 200px;margin-top:5px;" id="statusbtn" class="btn btn-success">Filling in Progress</button>
-                    <input type="text" placeholder="{{currentstatus}}"  formControlName="statusCd" [(ngModel)]="currentstatus" hidden>
-                </div>
-            </div>
 
 
 
-
-                <div id="submittedbtns">
-                <button mat-raised-button color="warn" mat-dialog-close>Cancel</button>
-                <button style="margin-left:10px" mat-raised-button color="primary" (click)="submit()" mat-dialog-close>Submit</button>
-            </div>
-            </div>
-        </div>
-
-    </div>
-</form> -->
-
-
-
+<button [print]="['printstartfillingform', config]" id="printbtn">Print</button>
 
 <form [formGroup]="startFillingform" id="form">
     <h1>Fill Order</h1>
     <input type="text" placeholder="{{Orderdetails.orderId}}" formControlName="orderId" [(ngModel)]="Orderdetails.orderId" hidden>
     <div id="table">
         
-        <table class="custom-table">
+        <table class="custom-table" id="printstartfillingform">
             <thead>
                 <tr>
                     <th>IMAGE</th>
@@ -99,7 +22,7 @@
                 <tr *ngFor="let item of orderItemDetails">
                     <td> <img src="{{imageBaseUrl}}{{item.imageUrl}}" class="image" height="110px" width="110px"></td>
                     <td>{{item.productName}}</td>
-                    <td>{{item.productSku}}</td>
+                    <td>{{item.productSkuId}}</td>
                     <td>12345678</td>
                     <td>{{item.quantity}}</td>
 
@@ -113,7 +36,7 @@
         <button (click)="filling($event)" [value]="startfilling"  mat-raised-button color="primary">Start</button>
         <input type="text" placeholder="{{currentstatus}}"  formControlName="statusCd" [(ngModel)]="currentstatus" hidden>
         <button mat-raised-button color="warn" mat-dialog-close style="margin-left: 20px;">Cancel</button>
-        <!-- <button style="margin-left:10px" mat-raised-button color="primary" (click)="submit()" mat-dialog-close>Submit</button> -->
+       
        
     </div>
 
