--- a/src/app/modules/admin/components/start-packing-action/start-packing-action.component.html
+++ b/src/app/modules/admin/components/start-packing-action/start-packing-action.component.html
@@ -1,116 +1,20 @@
-<!-- <form [formGroup]="startpackingform" id="form">
-    <h1>Start Packing</h1>
-    <button type="button" id="printbtn1">Print Label</button>
-    <button type="button" id="printbtn2">Print INV</button>
-    <div class="card-container">
-        <div>
-            <div class="card">
-
-                <div class="card-header">
-                    <span>
-
-                        <b>Order Id</b>
-                            <br><input type="text" placeholder="{{Orderdetails.orderId}}" formControlName="orderId" [(ngModel)]="Orderdetails.orderId">
-                    
-                        <li><b>status</b>
-                            <br>{{Orderdetails.statusCd}}
-                        </li>
-                        <li><b>Expected Date</b>
-                            <br>{{Orderdetails.orderSubmitDtTm}}
-                        </li>
-                        <li><b>Total Amount</b>
-                            <br>₹{{Orderdetails.totalAmount}}.00
-                        </li>
-                        <li><b>mobileNumber</b>
-                            <br>{{Orderdetails.mobileNumber}}
-                        </li>
-                        <li><b>Last Updated Date:</b>
-                            <br>Null
-                        </li>
-                        <span class="icons">
-
-                        </span>
-                    </span>
-
-                </div>
-
-
-                <div class="card-body" class="image-item">
-                    <div *ngFor="let item of orderItemDetails">
-                        <img src="{{imageBaseUrl}}{{item.imageUrl}}" class="image" height="130px" width="130px">
-                        
-                        <div class="description">
-
-
-                            <p> <b>Name:</b>&nbsp;&nbsp;&nbsp;{{item.productName}}</p>
-                            <p><b>Quantity:</b>&nbsp;&nbsp;&nbsp;{{item.quantity}}</p>
-                            <p><b>GST:</b>&nbsp;&nbsp;&nbsp;{{item.igstAmt}}%</p>
-
-                            <p><b>price:</b>&nbsp;&nbsp;&nbsp;{{item.totalPrice}}</p>
-                        </div>
-                        <div class="form-check" style="margin-bottom: 20px;">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                            <label class="form-check-label" for="flexCheckDefault ">
-                              Start Packing
-                            </label>
-                          </div>
-                    </div>
-                    
-                </div>
-
-            <div class="row">
-                <div class="col-2">
-                    <label class="lables">Date and time:</label>
-                    <input type="datetime-local" formControlName="lastUpdateDtTm"
-                        [(ngModel)]="startpackingform.lastUpdateDtTm" class="form-control">
-                </div>
-                <div class="col-4">
-                     <label>Click on Status button:</label>
-                     <br>
-                    <button (click)="filling($event)" [value]="startpacking"  style="width: 200px;margin-top:5px;" id="statusbtn" class="btn btn-success">Packing in progress</button>
-                    <input type="text" placeholder="{{currentstatus}}"  formControlName="statusCd" [(ngModel)]="currentstatus" hidden>
-                </div>
-            </div>
-
-
-
-
-                <div id="submittedbtns">
-                <button mat-raised-button color="warn" mat-dialog-close>Cancel</button>
-                <button style="margin-left:10px" mat-raised-button color="primary" (click)="submit()" mat-dialog-close>Submit</button>
-                <button (click)="filling($event)" [value]="startpacking" mat-raised-button color="primary" (click)="submit()" style="margin-left:10px;width: 90px;">Start</button>
-                <input type="text" placeholder="{{currentstatus}}"  formControlName="statusCd" [(ngModel)]="currentstatus" hidden>
-            </div>
-            </div>
-        </div>
-
-    </div>
-</form>
- -->
-
-
-
-
-
 <form [formGroup]="startpackingform" id="form">
-
-
     <h1 id="headding">Start Packing</h1>
     <div id="printbtns">
-        <button type="button" id="printbtn1">Print Label</button>
+
+        <button [print]="['printstartpackingform', config]" id="printbtn1">Print</button>
         <br>
         <button type="button" class="printbtn2" style="margin-left: 10px;">Print Invoice</button>
     </div>
     <div class="card" class="card1">
 
-        <div class="card-body" class="card-body1">
+        <div class="card-body" class="card-body1" id="printstartpackingform">
             <div class="row">
                 <div>
-                    <!-- <b>OredrId
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
-                    <p>{{Orderdetails.orderId}}</p> -->
+
                     <b>OrderId:</b>
-                    <p><input type="text" formControlName="orderId" placeholder="{{Orderdetails.orderId}}" [(ngModel)]="Orderdetails.orderId" [ngClass]="{'hide-input-border': shouldHideBorder}"></p> 
+                    <p><input type="text" formControlName="orderId" placeholder="{{Orderdetails.orderId}}"
+                            [(ngModel)]="Orderdetails.orderId" [ngClass]="{'hide-input-border': shouldHideBorder}"></p>
                     <b>Name
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
                     <p>{{Orderdetails.firstName}}</p>
@@ -146,7 +50,7 @@
 
         </div>
     </div>
-   
+
     <div id="submittedbtns">
 
 
@@ -158,5 +62,5 @@
     </div>
 
 
-   
+
 </form>
