--- a/src/app/modules/admin/components/start-packing-action/start-packing-action.component.scss
+++ b/src/app/modules/admin/components/start-packing-action/start-packing-action.component.scss
@@ -1,167 +1,4 @@
-// #form{
-//     width: 1400px;
-//     height: 600px;
-// }
 
-
-
-// h1{
-//     margin-left: 600px;
-//     color:coral
-//   }
-
-// span li{
-// position: relative;
-// display: inline-block;
-// justify-content: space-between;
-// margin-left: 50px;
-
-
-// }
-// li{
-// list-style-type: none;
-// justify-items: self-start;
-// }
-
-// #Buy-Again1{
-// position: relative;
-// left: 350px;
-// margin-top: -40px;
-// background-color: orange;
-// color:black;
-// }
-// .card{
-// position: relative;
-// height: 250px;
-// width:1050px;
-// margin-left: 100px;
-// top:-30px;
-// }
-// #order{
-// position: relative;
-// left:-50px;
-// }
-
-
-
-// #image {
-// flex: 0 0 calc(33.33% - 20px);
-// margin: 10px;
-
-
-// }
-
-// .card-container {
-
-// width: 800px;
-// position: relative;
-// left:10px;
-// margin-top: 50px;
-// }
-
-// .card {
-// width: 1200px;
-// border: 1px solid #ccc;
-// margin: 10px;
-// padding: 10px;
-// height:600px;
-// margin-top: 80px;
-// margin-left: 150px;
-// }
-
-// .card-header {
-// font-weight:30px;
-// background-color:lightskyblue;
-
-// }
-
-// .card-body {
-// margin-top: 10px;
-
-// }
-
-
-
-// .image {
-
-
-// // height: auto;
-// // margin-right: 50px;
-// margin-top: 20px;
-// //  flex: 0 0 calc(33.33% - 20px);
-
-
-// }
-
-// .description {
-// /* Define any styles for the description */
-// font-size: 14px;
-// left:10px;
-//  position: relative;
-//  margin-top: 20px;
-//  margin-left: 10px;
-
-
-
-// }
-// .icons{
-// position: relative;
-// left:160px;
-
-// }
-// .image-item{
-//  display: inline-flex;
-// //  margin-top: 20px;
-// //  margin-left: 10px;
-// }
-
-
-// #left-arrow{
-// margin-top: 50px;
-// position: absolute;
-// margin-left: 60px;
-
-// }
-// #submittedbtns{
-// margin-top:30px;
-// margin-left: 450px;
-
-
-// }
-// #statusbtn{
-// color:black;
-//  height: 30px;
-// }
-
-
-// #printbtn1{
-// margin-left: 1100px;
-// width: 100px;
-// height: 30px;
-// color: cadetblue;
-// margin-top: -200px;
-// }
-
-// #printbtn2{
-// margin-left: 1200px;
-// width: 100px;
-// height: 30px;
-// color: rgb(36, 163, 167);
-// margin-top: -400px;
-// margin-left: 20px;
-
-// }
-
-
-// #flexCheckDefault{
-//     width: 20px;
-//     height: 20px;
-//     margin-top: -3px;
-
-// }
-// .form-check-label{
-//     font-size: 18px;
-// }
 #form{
     width: 1300px;
     height: 600px;
@@ -185,7 +22,7 @@
 }
 #submittedbtns{
       margin-top:250px;
-    margin-left: 450px;
+    margin-left: 470px;
    
    
 }
@@ -197,21 +34,21 @@
 
 #printbtn1{
     // margin-left: 990px;
-    width: 180px;
+    width: 100px;
     height: 30px;
   color: black;
     // margin-top: -200px;
 }
 .printbtn2{
     // margin-left: 1100px;
-    width: 180px;
+    width: 100px;
     height: 30px;
     color:black;
      margin-top: 20px;
 }
 #printbtns{
     margin-left: 1000px;
-    margin-top: 80px;
+    margin-top: 50px;
     position: absolute;
 }
 
@@ -243,3 +80,12 @@ b{
   }
 
 
+  #printbtn{
+    margin-left: 1000px;
+    width: 100px;
+    height: 30px;
+    color: cadetblue;
+    margin-top:100px;
+    position: absolute;
+  }
+  
