--- a/src/app/modules/admin/components/add-new-option/add-new-option.component.scss
+++ b/src/app/modules/admin/components/add-new-option/add-new-option.component.scss
@@ -1,17 +1,25 @@
-#main{
-    margin-top: 100px;
-    margin-left: 100px;
+/*
+ *   Copyright (c) 2023 Dmantz Technologies Pvt ltd
+ *   All rights reserved.
+ */
+
+
+
+
+// #main{
+//     margin-top: 100px;
+//     margin-left: 100px;
    
-}
+// }
 #form{
-    margin-left: 400px;
+    margin-left: 50px;
     margin-top: 100px;
-    border-style: ridge;
-    width: 700px;
+    // border-style: ridge;
+    width: 900px;
     height: 400px;
 }
 .btns{
-    margin-left: 230px;
+    margin-left: 300px;
     margin-top: 100px;
 }
 #cancelbtn{
